DuPont DevSB/src/objects/Group_Report__c.object
<CustomObject>
    <description>Master object to Group Report Result,  used in Advanced Reporting prototype for the cascade deletion of related records, populated by the Batch Apex.</description>
    <fields>
        <fullName>Batch_Apex_Job_ID__c</fullName>
        <description>Stores the Batch Apex Job&apos;s ID running in the background</description>
        <label>Batch Apex Job ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Records_Count__c</fullName>
        <description>Custom field to store the count of the child records inserted initially to the master record, as the resultant of user&apos;s query.</description>
        <label>Child Records Count</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Report_ID__c</fullName>
        <description>Custom field which holds the ID of the custom report populated based on the output object report type selected by the user.</description>
        <label>Custom Report ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Report_Type__c</fullName>
        <description>Custom field populated by the Advanced Reporting with the output object selected by user.</description>
        <label>Group Report Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Result_Row_Count__c</fullName>
        <description>The roll-up summary field to display the count of detail records.</description>
        <label>Group Result Row Count</label>
        <summaryForeignKey>Group_Report_Result__c.Group_Report__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <description>Custom field to hold the value of the status of the master record,i.e, either in use or expired.</description>
        <label>Record Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Group Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Group_Report_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Group Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>